	   is not already present.  This helps in multiview EXRs to
	   distinguish right and left pair of images.
	 - EXR reader/saver now keeps Color/RGBAZ in their original locations
	   when reading/saving a multichannel or multipart OpenEXR.  This
	   means Color, Red, Green, Blue, Alpha and Z remain at the top of
	   the list.
	 - EXR reader now reads stereo files properly once again.

v4.1.3   - Native file requester on Windows does not leave their menus open
	   and obstructing the view.
	 - Previous channel hotkey now works correctly on Color channel when
	   this channel is in the middle of the channel list.
	 - Previous channel hotkey now works correctly on Color channel when
	   the following channel would be alpha overlay (no more than RGBA
	   is loaded).
	 - Previous channel hotkey now works correctly on Color channel when
	   the following channel would be a lumma (RGB or Y,RY,BY only is
	   loaded).
	 - Bug fixed IFF image reader to work as all other image readers,
	   reading the header chunk on each fetch.  Improved the fetching to
	   only fetch once instead of twice as before.
	 - Made all shortcuts be a toggle (Z, N, C, R, G, B, A, L and V)
	   between their counter parts and the previously selected channel.
	 - Made image switching keep the layer selected when possible.  Note
	   that this feature does not always work particularly when toggling
	   the shortcuts (specially when dealing with multipart openexrs),
	   so it should be considered alpha.
	 - Made use OCIO button be like the rest of the buttons instead of
	   a gray one.

v4.1.2   - Updated FFMPEG to a later (almost latest) version.
	 - Improvements to channel/layer usage per request from Dominik Pott:
	   	* Next/Previous channel hotkeys are less granular.  They now
		  jump RGBA channel groups.
		* Switching to the Z channel no longer breaks the hotkeys of
		  RGBA.
		* Channel names are now sorted according to function (ex.
		  XYZ, RGB, etc ).